fix image stretching

--- a/src/App.css
+++ b/src/App.css
@@ -344,7 +344,7 @@ body {
   flex-direction: row;
   border: 1px solid transparent;
   border-radius: 10px;
-  width: 500px;
+  width: 420px;
   padding: 16px;
   background: #f3f0fb;
 }
